[package]
name = "wp-arrow"
version = "0.1.1"
edition = "2024"
description = "Apache Arrow utilities for wp-model, providing schema mapping, data conversion, and IPC support"
license = "Apache-2.0"
repository = "https://github.com/wp-labs/wp-arrow"
homepage = "https://github.com/wp-labs/wp-arrow"
readme = "README.md"
keywords = ["arrow", "ipc", "schema", "wp-model"]
categories = ["data-structures", "encoding"]

[lib]
name = "wp_arrow"

[dependencies]
arrow = { version = "57", default-features = false, features = ["ipc"] }
wp-model-core =  "0.8"
chrono = "0.4"
